fixed hamburger menu on mobile, resolved readme links,, added screenshot

--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
 .menu .navbar ul a:hover {
     font-weight: bolder;
     color: rgb(80, 79, 79);
-    border-bottom: 3px solid white;
+    /* border-bottom: 3px solid white; */
 }
 
 /* .active {
@@ -264,6 +264,7 @@ body {
         flex-direction: column;
         align-items: start;
     }
+
     .box-1 {
         max-width: 70%;
     }
@@ -304,9 +305,6 @@ body {
 
     .icons {
         display: flex;
-        position: absolute;
-        top: 1.7rem;
-        left: 25rem;
         z-index: 2;
     }
 
@@ -319,6 +317,6 @@ body {
     }
 
     .footer {
-        font-size: 14px;
+        font-size: 12px;
     }
 }
